updated the playora django system

--- a/playora/playora_app/templates/dashboard.html
+++ b/playora/playora_app/templates/dashboard.html
@@ -265,10 +265,10 @@
                     <div>
                       <p
                         class="mb-0 font-sans font-semibold leading-normal text-sm">
-                        Today's Money
+                        Total Deposit
                       </p>
                       <h5 class="mb-0 font-bold">
-                        $53,000
+                        53,000
                         <span
                           class="leading-normal text-sm font-weight-bolder text-lime-500"
                           >+55%</span
@@ -299,7 +299,7 @@
                     <div>
                       <p
                         class="mb-0 font-sans font-semibold leading-normal text-sm">
-                        Today's Users
+                        Today's Margin
                       </p>
                       <h5 class="mb-0 font-bold">
                         2,300
@@ -333,10 +333,10 @@
                     <div>
                       <p
                         class="mb-0 font-sans font-semibold leading-normal text-sm">
-                        New Clients
+                        New Traffic
                       </p>
                       <h5 class="mb-0 font-bold">
-                        +3,462
+                        +26
                         <span
                           class="leading-normal text-red-600 text-sm font-weight-bolder"
                           >-2%</span
@@ -366,10 +366,10 @@
                     <div>
                       <p
                         class="mb-0 font-sans font-semibold leading-normal text-sm">
-                        Sales
+                        Balance
                       </p>
                       <h5 class="mb-0 font-bold">
-                        $103,430
+                        103,430
                         <span
                           class="leading-normal text-sm font-weight-bolder text-lime-500"
                           >+5%</span
@@ -400,10 +400,10 @@
                   <div class="max-w-full px-3 lg:w-1/2 lg:flex-none">
                     <div class="flex flex-col h-full">
                       <p class="pt-2 mb-1 font-semibold">Built by developers</p>
-                      <h5 class="font-bold">Soft UI Dashboard</h5>
+                      <h5 class="font-bold">Playora</h5>
                       <p class="mb-12">
-                        From colors, cards, typography to complex elements, you
-                        will find the full documentation.
+                        a smart betting behavior management platform designed to help users—particularly women, 
+                        gain control over their betting habits.
                       </p>
                       <a
                         class="mt-auto mb-0 font-semibold leading-normal text-sm group text-slate-500"
@@ -445,11 +445,11 @@
                   class="absolute top-0 left-0 w-full h-full bg-center bg-cover bg-gradient-to-tl from-gray-900 to-slate-800 opacity-80"></span>
                 <div class="relative z-10 flex flex-col flex-auto h-full p-4">
                   <h5 class="pt-2 mb-6 font-bold text-white">
-                    Work with the rockets
+                    Bet with Intelligence
                   </h5>
                   <p class="text-white">
-                    Wealth creation is an evolutionarily recent positive-sum
-                    game. It is all about who take the opportunity first.
+                    he system enables users to set custom betting limits, monitors trends, 
+                    and sends proactive alerts when spending thresholds are reached.
                   </p>
                   <a
                     class="mt-auto mb-0 font-semibold leading-normal text-white group text-sm"
@@ -478,7 +478,7 @@
                     <canvas id="chart-bars" height="170"></canvas>
                   </div>
                 </div>
-                <h6 class="mt-6 mb-0 ml-2">Active Users</h6>
+                <h6 class="mt-6 mb-0 ml-2">Active Bets</h6>
                 <p class="ml-2 leading-normal text-sm">
                   (<span class="font-bold">+23%</span>) than last week
                 </p>
@@ -721,7 +721,7 @@
               class="border-black/12.5 shadow-soft-xl relative z-20 flex min-w-0 flex-col break-words rounded-2xl border-0 border-solid bg-white bg-clip-border">
               <div
                 class="border-black/12.5 mb-0 rounded-t-2xl border-b-0 border-solid bg-white p-6 pb-0">
-                <h6>Sales overview</h6>
+                <h6>Trends overview</h6>
                 <p class="leading-normal text-sm">
                   <i class="fa fa-arrow-up text-lime-500"></i>
                   <span class="font-semibold">4% more</span> in 2021
@@ -750,10 +750,10 @@
                 <div class="flex flex-wrap mt-0 -mx-3">
                   <div
                     class="flex-none w-7/12 max-w-full px-3 mt-0 lg:w-1/2 lg:flex-none">
-                    <h6>Projects</h6>
+                    <h6>Support Circles</h6>
                     <p class="mb-0 leading-normal text-sm">
                       <i class="fa fa-check text-cyan-500"></i>
-                      <span class="ml-1 font-semibold">30 done</span>
+                      <span class="ml-1 font-semibold">progress done</span>
                       this month
                     </p>
                   </div>
@@ -805,7 +805,7 @@
                       <tr>
                         <th
                           class="px-6 py-3 font-bold tracking-normal text-left uppercase align-middle bg-transparent border-b letter border-b-solid text-xxs whitespace-nowrap border-b-gray-200 text-slate-400 opacity-70">
-                          Companies
+                          Betting Sites
                         </th>
                         <th
                           class="px-6 py-3 pl-2 font-bold tracking-normal text-left uppercase align-middle bg-transparent border-b letter border-b-solid text-xxs whitespace-nowrap border-b-gray-200 text-slate-400 opacity-70">
@@ -813,7 +813,7 @@
                         </th>
                         <th
                           class="px-6 py-3 font-bold tracking-normal text-center uppercase align-middle bg-transparent border-b letter border-b-solid text-xxs whitespace-nowrap border-b-gray-200 text-slate-400 opacity-70">
-                          Budget
+                          Total Saved
                         </th>
                         <th
                           class="px-6 py-3 font-bold tracking-normal text-center uppercase align-middle bg-transparent border-b letter border-b-solid text-xxs whitespace-nowrap border-b-gray-200 text-slate-400 opacity-70">
@@ -828,13 +828,13 @@
                           <div class="flex px-2 py-1">
                             <div>
                               <img
-                                src="{% static 'img/small-logos/logo-xd.svg' %}"
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0vk0a9nkl3K_ZdERn5ZNRfmtY-BWwWYqLOg&s"
                                 class="inline-flex items-center justify-center mr-4 text-white transition-all duration-200 ease-soft-in-out text-sm h-9 w-9 rounded-xl"
                                 alt="xd" />
                             </div>
                             <div class="flex flex-col justify-center">
                               <h6 class="mb-0 leading-normal text-sm">
-                                Soft UI XD Version
+                                Sportpesa
                               </h6>
                             </div>
                           </div>
@@ -955,13 +955,13 @@
                           <div class="flex px-2 py-1">
                             <div>
                               <img
-                                src="{% static 'img/small-logos/logo-atlassian.svg' %}"
+                                src="https://media.istockphoto.com/id/1392395572/vector/sport-bet-logo-icon-live-bet-app-football-soccer-vector-icon.jpg?s=612x612&w=0&k=20&c=AbIaVz8z9vQSLzrEQRffdZ4FQHj-gz93PN2bO9HpYNs="
                                 class="inline-flex items-center justify-center mr-4 text-white transition-all duration-200 ease-soft-in-out text-sm h-9 w-9 rounded-xl"
                                 alt="atlassian" />
                             </div>
                             <div class="flex flex-col justify-center">
                               <h6 class="mb-0 leading-normal text-sm">
-                                Add Progress Track
+                                Sporty Bet
                               </h6>
                             </div>
                           </div>
@@ -1044,13 +1044,13 @@
                           <div class="flex px-2 py-1">
                             <div>
                               <img
-                                src="{% static 'img/small-logos/logo-slack.svg' %}"
+                                src="https://play-lh.googleusercontent.com/D5cCIHc5ZZH_VUtEioYLkzliL4yKvDqKxyFPVoyDzDr9J6RvUdKFfzidR2UydSFfuBKI"
                                 class="inline-flex items-center justify-center mr-4 text-white transition-all duration-200 ease-soft-in-out text-sm h-9 w-9 rounded-xl"
                                 alt="team7" />
                             </div>
                             <div class="flex flex-col justify-center">
                               <h6 class="mb-0 leading-normal text-sm">
-                                Fix Platform Errors
+                                1x Bet
                               </h6>
                             </div>
                           </div>
@@ -1133,13 +1133,13 @@
                           <div class="flex px-2 py-1">
                             <div>
                               <img
-                                src="{% static 'img/small-logos/logo-spotify.svg' %}"
+                                src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Bet365_Logo.svg/640px-Bet365_Logo.svg.png"
                                 class="inline-flex items-center justify-center mr-4 text-white transition-all duration-200 ease-soft-in-out text-sm h-9 w-9 rounded-xl"
                                 alt="spotify" />
                             </div>
                             <div class="flex flex-col justify-center">
                               <h6 class="mb-0 leading-normal text-sm">
-                                Launch our Mobile App
+                                Bet365
                               </h6>
                             </div>
                           </div>
@@ -1260,13 +1260,13 @@
                           <div class="flex px-2 py-1">
                             <div>
                               <img
-                                src="{% static 'img/small-logos/logo-jira.svg' %}"
+                                src="https://www.codester.com/static/uploads/items/000/040/40439/preview.jpg"
                                 class="inline-flex items-center justify-center mr-4 text-white transition-all duration-200 ease-soft-in-out text-sm h-9 w-9 rounded-xl"
                                 alt="jira" />
                             </div>
                             <div class="flex flex-col justify-center">
                               <h6 class="mb-0 leading-normal text-sm">
-                                Add the New Pricing Page
+                                BetCoin
                               </h6>
                             </div>
                           </div>
@@ -1568,7 +1568,7 @@
                   <script>
                     document.write(new Date().getFullYear() + ",");
                   </script>
-                  made with <i class="fa fa-heart"></i> by
+                  <!-- made with <i class="fa fa-heart"></i> by
                   <a
                     href="https://www.creative-tim.com"
                     class="font-semibold text-slate-700"
@@ -1576,7 +1576,7 @@
                     >Creative Tim</a
                   >
                   for a better web.
-                  <span class="w-full"> Distributed by ❤️ ThemeWagon </span>
+                  <span class="w-full"> Distributed by ❤️ ThemeWagon </span> -->
                 </div>
               </div>
               <div
@@ -1587,7 +1587,7 @@
                     <a
                       href="#!"
                       class="block px-4 pt-0 pb-1 font-normal transition-colors ease-soft-in-out text-sm text-slate-500"
-                      >Creative Tim</a
+                      >EchoMinds</a
                     >
                   </li>
                   <li class="nav-item">
