--- a/playora/playora_app/templates/profile.html
+++ b/playora/playora_app/templates/profile.html
@@ -27,7 +27,7 @@
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <!-- Main Styling -->
     <link
-      href="{% static 'css/soft-ui-dashboard-tailwind.css' %}'"
+      href="{% static 'css/soft-ui-dashboard-tailwind.css' %}"
       rel="stylesheet" />
 
     <script
@@ -1121,7 +1121,7 @@
                   <script>
                     document.write(new Date().getFullYear() + ",");
                   </script>
-                  made with <i class="fa fa-heart"></i> by
+                  <!-- made with <i class="fa fa-heart"></i> by
                   <a
                     href="https://www.creative-tim.com"
                     class="font-semibold text-slate-700"
@@ -1129,7 +1129,7 @@
                     >Creative Tim</a
                   >
                   for a better web.
-                  <span class="w-full"> Distributed by ❤️ ThemeWagon </span>
+                  <span class="w-full"> Distributed by ❤️ ThemeWagon </span> -->
                 </div>
               </div>
               <div
