--- a/playora/playora_app/templates/tables.html
+++ b/playora/playora_app/templates/tables.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/apple-icon.png' %}" />
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" />
-    <title>Soft UI Dashboard Tailwind</title>
+    <title>Leaderboard</title>
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <!-- Font Awesome Icons -->
@@ -34,12 +34,12 @@
           <nav>
             <!-- breadcrumb -->
             <ol class="flex flex-wrap pt-1 mr-12 bg-transparent rounded-lg sm:mr-16">
-              <li class="text-sm leading-normal">
+              <!-- <li class="text-sm leading-normal">
                 <a class="opacity-50 text-slate-700" href="javascript:;">Pages</a>
-              </li>
+              </li> -->
               <li class="text-sm pl-2 capitalize leading-normal text-slate-700 before:float-left before:pr-2 before:text-gray-600 before:content-['/']" aria-current="page">Tables</li>
             </ol>
-            <h6 class="mb-0 font-bold capitalize">Tables</h6>
+            <h6 class="mb-0 font-bold capitalize">Leaderboard</h6>
           </nav>
 
           <div class="flex items-center mt-2 grow sm:mt-0 sm:mr-6 md:mr-0 lg:flex lg:basis-auto">
@@ -174,7 +174,7 @@
                         <th class="px-6 py-3 font-bold text-left uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Author</th>
                         <th class="px-6 py-3 pl-2 font-bold text-left uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Function</th>
                         <th class="px-6 py-3 font-bold text-center uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Status</th>
-                        <th class="px-6 py-3 font-bold text-center uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Employed</th>
+                        <th class="px-6 py-3 font-bold text-center uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Last Played</th>
                         <th class="px-6 py-3 font-semibold capitalize align-middle bg-transparent border-b border-gray-200 border-solid shadow-none tracking-none whitespace-nowrap text-slate-400 opacity-70"></th>
                       </tr>
                     </thead>
@@ -349,7 +349,7 @@
           <div class="flex-none w-full max-w-full px-3">
             <div class="relative flex flex-col min-w-0 mb-6 break-words bg-white border-0 border-transparent border-solid shadow-soft-xl rounded-2xl bg-clip-border">
               <div class="p-6 pb-0 mb-0 bg-white border-b-0 border-b-solid rounded-t-2xl border-b-transparent">
-                <h6>Projects table</h6>
+                <h6>Top Betting Sites</h6>
               </div>
               <div class="flex-auto px-0 pt-0 pb-2">
                 <div class="p-0 overflow-x-auto">
@@ -357,9 +357,9 @@
                     <thead class="align-bottom">
                       <tr>
                         <th class="px-6 py-3 font-bold text-left uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Project</th>
-                        <th class="px-6 py-3 pl-2 font-bold text-left uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Budget</th>
+                        <th class="px-6 py-3 pl-2 font-bold text-left uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Avg. Deposit</th>
                         <th class="px-6 py-3 pl-2 font-bold text-left uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Status</th>
-                        <th class="px-6 py-3 pl-2 font-bold text-center uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Completion</th>
+                        <th class="px-6 py-3 pl-2 font-bold text-center uppercase align-middle bg-transparent border-b border-gray-200 shadow-none text-xxs border-b-solid tracking-none whitespace-nowrap text-slate-400 opacity-70">Risk Mgt</th>
                         <th class="px-6 py-3 font-semibold capitalize align-middle bg-transparent border-b border-gray-200 border-solid shadow-none tracking-none whitespace-nowrap"></th>
                       </tr>
                     </thead>
@@ -368,10 +368,10 @@
                         <td class="p-2 align-middle bg-transparent border-b whitespace-nowrap shadow-transparent">
                           <div class="flex px-2">
                             <div>
-                              <img src="{% static 'img/small-logos/logo-spotify.svg' %}" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="spotify" />
+                              <img src="https://biznakenya.com/wp-content/uploads/2024/02/Screenshot-2024-02-03-at-21.24.46-1.png" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="spotify" />
                             </div>
                             <div class="my-auto">
-                              <h6 class="mb-0 text-sm leading-normal">Spotify</h6>
+                              <h6 class="mb-0 text-sm leading-normal">Sportpesa</h6>
                             </div>
                           </div>
                         </td>
@@ -401,10 +401,10 @@
                         <td class="p-2 align-middle bg-transparent border-b whitespace-nowrap shadow-transparent">
                           <div class="flex px-2">
                             <div>
-                              <img src="{% static 'img/small-logos/logo-invision.svg' %}" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="invision" />
+                              <img src="https://www.wufwuf.io/aviator/betwaybanner.webp" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="invision" />
                             </div>
                             <div class="my-auto">
-                              <h6 class="mb-0 text-sm leading-normal">Invision</h6>
+                              <h6 class="mb-0 text-sm leading-normal">Betway</h6>
                             </div>
                           </div>
                         </td>
@@ -434,10 +434,10 @@
                         <td class="p-2 align-middle bg-transparent border-b whitespace-nowrap shadow-transparent">
                           <div class="flex px-2">
                             <div>
-                              <img src="{% static 'img/small-logos/logo-jira.svg' %}" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="jira" />
+                              <img src="https://www.betika.com/en-ke/static/images/logo-small.png" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="jira" />
                             </div>
                             <div class="my-auto">
-                              <h6 class="mb-0 text-sm leading-normal">Jira</h6>
+                              <h6 class="mb-0 text-sm leading-normal">Betika</h6>
                             </div>
                           </div>
                         </td>
@@ -467,10 +467,10 @@
                         <td class="p-2 align-middle bg-transparent border-b whitespace-nowrap shadow-transparent">
                           <div class="flex px-2">
                             <div>
-                              <img src="{% static 'img/small-logos/logo-slack.svg' %}" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="slack" />
+                              <img src="https://bet-country.com/assets/img/bet/brand-logos/betin-538x212.jpg" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="slack" />
                             </div>
                             <div class="my-auto">
-                              <h6 class="mb-0 text-sm leading-normal">Slack</h6>
+                              <h6 class="mb-0 text-sm leading-normal">Betin</h6>
                             </div>
                           </div>
                         </td>
@@ -500,10 +500,10 @@
                         <td class="p-2 align-middle bg-transparent border-b whitespace-nowrap shadow-transparent">
                           <div class="flex px-2">
                             <div>
-                              <img src="{% static 'img/small-logos/logo-webdev.svg' %}" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="webdev" />
+                              <img src="https://usercontent.one/wp/www.sportsbetkenya.com/wp-content/uploads/2021/07/22Bet-logo.png" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="webdev" />
                             </div>
                             <div class="my-auto">
-                              <h6 class="mb-0 text-sm leading-normal">Webdev</h6>
+                              <h6 class="mb-0 text-sm leading-normal">22 Bet</h6>
                             </div>
                           </div>
                         </td>
@@ -533,10 +533,10 @@
                         <td class="p-2 align-middle bg-transparent border-b-0 whitespace-nowrap shadow-transparent">
                           <div class="flex px-2">
                             <div>
-                              <img src="{% static 'img/small-logos/logo-xd.svg' %}" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="xd" />
+                              <img src="https://zipo.co.ke/wp-content/uploads/2022/06/odibets-casino-kenya.png" class="inline-flex items-center justify-center mr-2 text-sm text-white transition-all duration-200 rounded-full ease-soft-in-out h-9 w-9" alt="xd" />
                             </div>
                             <div class="my-auto">
-                              <h6 class="mb-0 text-sm leading-normal">Adobe XD</h6>
+                              <h6 class="mb-0 text-sm leading-normal">Odi Bet</h6>
                             </div>
                           </div>
                         </td>
@@ -580,7 +580,7 @@
                   <script>
                     document.write(new Date().getFullYear() + ",");
                   </script>
-                  made with <i class="fa fa-heart"></i> by
+                  <!-- made with <i class="fa fa-heart"></i> by
                   <a
                     href="https://www.creative-tim.com"
                     class="font-semibold text-slate-700"
@@ -589,7 +589,7 @@
                   >
 
                   for a better web.
-                  <span class="w-full"> Distributed by ❤️ ThemeWagon </span>
+                  <span class="w-full"> Distributed by ❤️ ThemeWagon </span> -->
                 </div>
               </div>
               <div
