--- a/playora/playora_app/templates/sidebar.html
+++ b/playora/playora_app/templates/sidebar.html
@@ -10,15 +10,14 @@ class="max-w-62.5 ease-nav-brand z-990 fixed inset-y-0 my-4 ml-4 block w-full -t
     sidenav-close></i>
   <a
     class="block px-8 py-6 m-0 text-sm whitespace-nowrap text-slate-700"
-    href="javascript:;"
-    target="_blank">
+    href="#">
     <img
       src="{% static 'img/logo-ct.png' %}"
       class="inline h-full max-w-full transition-all duration-200 ease-nav-brand max-h-8"
       alt="main_logo" />
     <span
       class="ml-1 font-semibold transition-all duration-200 ease-nav-brand"
-      >Soft UI Dashboard</span
+      >Playora</span
     >
   </a>
 </div>
